samples/_failures_safe/1761560517_e2fdf0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6b7b3c3c.c: In function ‘main’:
./samples/SAFE/__tmp_6b7b3c3c.c:140:9: error: expected declaration or statement at end of input
  140 |         printf("Memory allocation failed\n");
      |         ^~~~~~
./samples/SAFE/__tmp_6b7b3c3c.c:140:9: error: expected declaration or statement at end of input
